fix layout issue for dashboard and custable

--- a/frontend/churnguard/src/Components/CustomerTable/CustomerTable.css
+++ b/frontend/churnguard/src/Components/CustomerTable/CustomerTable.css
@@ -4,8 +4,10 @@
     margin: auto;
     width: 100%;
     overflow-x: auto; /* Enable horizontal scrolling if the table exceeds the screen width */
-    /* padding: 1rem; */
-    background-color: #141b2d;
+    padding: 1rem;
+    /* background-color: #141b2d; */
+    background-color: #0c0120;
+    font-size: 15px;
 }
 
 .customer-table {
@@ -32,7 +34,8 @@
 }
 
 .customer-table-container th {
-    background-color: #141b2d;
+    /* background-color: #141b2d; */
+    background-color: #8d7cabb7;                                              /*Header row colour*/
     border-bottom: 1px solid #ffffff; /* Add border below the table headers */
     border-right: 1px solid #ffffff; /* Add right border to table headers */
 }
@@ -42,7 +45,8 @@
 } 
 
 .customer-table-container tbody tr:nth-child(even) {
-    background-color: #1e2a3a;
+    /* background-color: #1e2a3a; */
+    background-color: #2e2148;                                        /* lighter purple rows */
     border-bottom: none; /* Remove bottom border for last row */
 }
 
@@ -55,10 +59,31 @@
 }
 
 .left {
-    /* position: absolute; */
-    /* left: 100px; */
+    /* position: absolute;
+    left: 100px;
     width: 1000px;
-    padding: 10px;
+    padding: 10px; */
     background-color: #0c0120;
+    /* display: flex; */
+    position: relative;
+    justify-content: center; 
+    align-items: center;
+    height: 100vh;             
+    width: 100vw;
   }
+
+  body {
+    margin: 0;
+    padding: 0;
+    /* background: #141b2d; */
+    background: #0c0120;
+    color: #e0e0e0;
+    font-family: "Source Sans Pro", sans-serif;
+    display: flex;
+    position: relative;
+    justify-content: center; 
+    align-items: center;
+    height: 100%;             
+    width: 100%;
+}
 
